--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@
     min-height: 100vh;
     max-width: 100vw;
     background-color:#C95460 ;
-    font-family: 'Caveat', cursive;
     overflow-x: hidden;
+    font-family: 'Open Sans', sans-serif;
 }
 
 /* -----HEADER----- */
@@ -19,7 +19,6 @@ header{
     max-width: 100vw;
     box-shadow: 0px 10px 10px -6px black;
     border-radius: 13em/3em;
- 
 }
 
 .contentHeader{
@@ -263,8 +262,8 @@ footer p{
     box-shadow: 1px 5px 5px 1px black;
     border-radius: 30px 40px 40px 30px;
     margin-top: 5vh;
-    margin-left: 4vw;
-    border:3px solid black
+    border:3px solid black;
+    overflow:hidden;
 
 }
 
@@ -329,7 +328,7 @@ width: 100%;
 }
 
 .checkContainer{
-    height: 60vh;
+    min-height: 60vh;
     min-width: 40vw;                                                    
     background-color: #9b3c46;
     font-size: 1.5rem;
@@ -363,5 +362,8 @@ width: 100%;
     }
     .contentHeaderMobile{
         display: inline;
+    }
+    .box1{
+        width: 90vw;
     }
 }
